@@ -281,6 +281,9 @@ Unreleased changes (1.0-dev)
 103. NUTCH-654 - urlfilter-regex's main does not work.
      (dogacan)
 
+104. NUTCH-640 - confusing description "set it to Integer.MAX_VALUE".
+     (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
